[package]
name = "code"
version = "1.4.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dfvs_solver"
path = "src/lib.rs"

[[bin]]
name = "stats"
path = "src/bin/stats.rs"

[[bin]]
name = "heuristics"
path = "src/bin/heur.rs"

[[bin]]
name = "reduction_statistics"
path = "src/bin/mult_reduction_stats.rs"

[[bin]]
name = "heuristic_statistics"
path = "src/bin/mult_heur.rs"

[[bin]]
name = "exact_statistics"
path = "src/bin/mult_exact.rs"

[[bin]]
name = "test_bin"
path = "src/bin/test_bin.rs"

[[bin]]
name = "print_kernel"
path = "src/bin/print_kernel.rs"

[[bin]]
name = "exact"
path = "src/bin/exact.rs"

[dependencies]
itertools = "0.10.1"
clap = { version = "3.0.13", features = ["derive", "regex"] }
ctrlc = "3.2.1"
regex = "1.5.5"
fxhash = "0.2.1"
duck_and_cover = { git = "https://github.com/mndmnky/duck-and-cover", version = "1.5.0" }
